--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-getopt": "^0.2.3",
     "pretty-ms": "^2.1.0",
     "simple-git": "^1.67.0",
+    "tmp": "0.0.31",
     "wikijs": "^1.1.1"
   },
   "devDependencies": {
